<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"    >

    <item
        android:id="@+id/product_item_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="Search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/product_item_empty_stock"
        android:title="@string/label_stock_empty"
        app:showAsAction="never" />
    <item
        android:id="@+id/product_item_few_stock"
        android:title="@string/label_stock_few"
        app:showAsAction="never" />

    <item
        android:id="@+id/product_item_many_stock"
        android:title="@string/label_stock_many"
        app:showAsAction="never" />

    <item
        android:id="@+id/product_item_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="always"
        android:title="@string/label_edit" />
    <item
        android:id="@+id/product_item_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/label_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/product_item_cancel"
        android:icon="@drawable/ic_close_white_24dp"
        android:title="@string/label_cancel"
        app:showAsAction="always" />
</menu>