<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/order_item_reset"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:visible="true"
        app:showAsAction="never"
        android:title="@string/label_reset_order" />
    <item
        android:id="@+id/order_item_save"
        android:icon="@drawable/ic_done_white_24dp"
        android:visible="true"
        app:showAsAction="never"
        android:title="@string/label_save_order" />
    <item
        android:id="@+id/order_item_remove"
        android:icon="@drawable/ic_remove_white_24dp"
        android:title="@string/label_remove"
        app:showAsAction="always" />
    <item
        android:id="@+id/order_item_add"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"
        android:title="@string/label_add" />

    <item
        android:id="@+id/order_item_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/label_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/order_item_cancel"
        android:icon="@drawable/ic_close_white_24dp"
        android:title="@string/label_cancel"
        app:showAsAction="always" />

</menu>