<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/search_btn_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_add_black_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_cart"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/label_price"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/text_product_count"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/search_text_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/label_product_name"
        android:textSize="32sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/text_product_price"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_rounded"
        android:text="@string/title_add_cart"
        android:textColor="@color/design_default_color_on_primary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search_btn_remove"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_remove_black_24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_cart"
        app:layout_constraintEnd_toStartOf="@+id/search_btn_add" />

    <TextView
        android:id="@+id/text_product_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_cart"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search_btn_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_rounded"
        android:text="@string/label_reset_search_product"
        android:textColor="@color/design_default_color_on_primary"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list_product"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/search_text_product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

    </androidx.recyclerview.widget.RecyclerView>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:baselineAligned="true"
        android:iconifiedByDefault="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

    </SearchView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:subtitle="cari barang"
            app:subtitleTextColor="#FFFFFF"
            app:title="Penjualan"
            app:titleTextColor="#FFFFFF"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


</androidx.constraintlayout.widget.ConstraintLayout>